# writeart

./: .gitignore  CMakeLists.txt  Converter.cpp  Converter.h  ConverterTest.cpp  LICENSE  Main.cpp  README.md  Standard.cpp  Test.cpp  testfile.txt  testfile.txt.html
lib/mylib/: Standard.h
src/: Converter.cpp  Converter.h  Main.cpp
test/: ConverterTest.cpp
